After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704486 - gnome-control-center always crashed in power settings
gnome-control-center always crashed in power settings
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-18 16:48 UTC by Igor Gnatenko
Modified: 2013-07-19 07:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Fix crash with no batteries (2.05 KB, patch)
2013-07-19 07:38 UTC, Bastien Nocera
committed Details | Review

Description Igor Gnatenko 2013-07-18 16:48:20 UTC
After booting into kernel w/o backlight acpi_video0 in sysfs. Only with intel backlight in sysfs I can't use power settings.
Backtraces: https://bugzilla.redhat.com/show_bug.cgi?id=985983
Comment 1 Bastien Nocera 2013-07-19 07:38:49 UTC
Created attachment 249584 [details] [review]
power: Fix crash with no batteries
Comment 2 Bastien Nocera 2013-07-19 07:40:24 UTC
Pushed to gnome-3-8 and master

Attachment 249584 [details] pushed as 026d779 - power: Fix crash with no batteries