power: Fix crash with no batteries

https://bugzilla.gnome.org/show_bug.cgi?id=704486