panels/power/cc-power-panel.c
@@ -700,7 +700,7 @@ up_client_changed (UpClient     *client,
                 "power-supply", TRUE,
                 "is-present", TRUE,
                 NULL);
-  for (i = 0; i < devices->len; i++)
+  for (i = 0; devices != NULL && i < devices->len; i++)
     {
       UpDevice *device = (UpDevice*) g_ptr_array_index (devices, i);
       g_object_get (device,
@@ -767,7 +767,7 @@ up_client_changed (UpClient     *client,
   if (!on_ups && n_batteries > 1)
     set_primary (self, composite);
 
-  for (i = 0; i < devices->len; i++)
+  for (i = 0; devices != NULL && i < devices->len; i++)
     {
       UpDevice *device = (UpDevice*) g_ptr_array_index (devices, i);
       g_object_get (device, "kind", &kind, NULL);
@@ -793,7 +793,7 @@ up_client_changed (UpClient     *client,
         }
     }
 
-  g_ptr_array_unref (devices);
+  g_clear_pointer (&devices, g_ptr_array_unref);
   g_object_unref (composite);
 }
 
@@ -1041,7 +1041,7 @@ set_ac_battery_ui_mode (CcPowerPanel *self)
   devices = up_client_get_devices (self->priv->up_client);
   g_debug ("got %d devices from upower\n", devices->len);
 
-  for (i = 0; i < devices->len; i++)
+  for (i = 0; devices != NULL && i < devices->len; i++)
     {
       device = g_ptr_array_index (devices, i);
       g_object_get (device, "kind", &kind, NULL);
@@ -1051,7 +1051,7 @@ set_ac_battery_ui_mode (CcPowerPanel *self)
           break;
         }
     }
-  g_ptr_array_unref (devices);
+  g_clear_pointer (&devices, g_ptr_array_unref);
 
 #ifdef TEST_NO_BATTERIES
   g_print ("forcing no batteries\n");
